# NetSurf-RSS

./: .breakpoints  README.md  main.py  pyproject.toml
netsurf_rss/: generator.py  views.py
netsurf_rss/templates/: base.html  index.html
